--- a/Sections/method.tex
+++ b/Sections/method.tex
@@ -1,23 +1,25 @@
-\label{headings}
+\subsection{Commmonsense Reasoning}
+
+\subsubsection{Commonsense Question Answering}
+
+\input{Sections/methods/qa_commonsense.tex}
 
 
-All headings should be lower case (except for first word and proper nouns),
-flush left, and bold.
+\subsubsection{Physical Commmonsense}
+\input{Sections/methods/physical_commonsense.tex}
 
 
-First-level headings should be in 12-point type.
+\subsubsection{Spatial Commmonsense}
+\input{Sections/methods/spatial_commonsense.tex}
 
 
-\subsection{Headings: second level}
+
+\subsection{Causual Reasoning}
+\input{Sections/methods/causual.tex}
 
 
-Second-level headings should be in 10-point type.
 
 
-\subsubsection{Headings: third level}
-
-
-Third-level headings should be in 10-point type.
 
 
 \paragraph{Paragraphs}
