add spatial reasoning

--- a/Sections/introduction.tex
+++ b/Sections/introduction.tex
@@ -61,4 +61,4 @@ the paper with your own.
 
 
 The formatting instructions contained in these style files are summarized in
-Sections \ref{gen_inst}, \ref{headings}, and \ref{others} below.
+Sections \ref{gen_inst} and \ref{others} below.
