--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,6 @@
 \documentclass{article}
 
+
 % if you need to pass options to natbib, use, e.g.:
 %     \PassOptionsToPackage{numbers, compress}{natbib}
 % before loading neurips_2024
@@ -31,6 +32,7 @@
 \usepackage{nicefrac}       % compact symbols for 1/2, etc.
 \usepackage{microtype}      % microtypography
 \usepackage{xcolor}         % colors
+\usepackage{graphicx}
 
 
 \title{Formatting Instructions For NeurIPS 2024}
@@ -46,7 +48,7 @@
 
 
 \author{%
-  David S.~Hippocampus\thanks{Use footnote for providing further information
+  Nguyen Ngo Viet Trung \thanks{Use footnote for providing further information
     about author (webpage, alternative address)---\emph{not} for acknowledging
     funding agencies.} \\
   Department of Computer Science\\
@@ -76,6 +78,17 @@
   % \texttt{email} \\
 }
 
+\author{%
+  Nguyen Ngo Viet Trung \\
+  Institute of Artificial Intelligence\\
+  University of Engineering and Technology - VNU-UET\\
+  Ha Noi, Viet Nam \\
+  22022598@vnu.edu.vn \\
+  }
+
+
+
+  
 
 \begin{document}
 
@@ -84,33 +97,29 @@
 
 
 \begin{abstract}
-  The abstract paragraph should be indented \nicefrac{1}{2}~inch (3~picas) on
-  both the left- and right-hand margins. Use 10~point type, with a vertical
-  spacing (leading) of 11~points.  The word \textbf{Abstract} must be centered,
-  bold, and in point size 12. Two line spaces precede the abstract. The abstract
-  must be limited to one paragraph.
+  This is abstract
 \end{abstract}
 
 
 \section{Introduction}
 
-\input{sections/introduction.tex}
+\input{Sections/introduction.tex}
 
 
 
 \section{Background}
-\input{sections/background.tex}
+\input{Sections/background.tex}
 
 \section{Method}
-\input{sections/method.tex}
+\input{Sections/method.tex}
 
 
 
 \section{Experiments and Results}
-\input{sections/exp.tex}
+\input{Sections/exp.tex}
 
 \section{Conclusion}
-\input{sections/conclusion.tex}
+\input{Sections/conclusion.tex}
 
 
 
@@ -122,8 +131,9 @@
 
 \section{Appendix / supplemental material}
 
-\input{sections/appendix.tex}
+\input{Sections/appendix.tex}
 
-
+\bibliographystyle{plain}
+\bibliography{mybib}
 
 \end{document}
