add causal reasoning

--- a/Sections/method.tex
+++ b/Sections/method.tex
@@ -15,16 +15,7 @@
 
 
 \subsection{Causual Reasoning}
-\input{Sections/methods/causual.tex}
+\input{Sections/methods/causal.tex}
 
 
 
-
-
-
-\paragraph{Paragraphs}
-
-
-There is also a \verb+\paragraph+ command available, which sets the heading in
-bold, flush left, and inline with the text, with the heading followed by 1\,em
-of space.
