--- a/mybib.bib
+++ b/mybib.bib
@@ -23,3 +23,21 @@
   journal={arXiv preprint arXiv:2203.08075},
   year={2022}
 }
+@article{xiong2024improving,
+  title={Improving causal reasoning in large language models: A survey},
+  author={Xiong, Siheng and Chen, Delin and Wu, Qingyang and Yu, Longxuan and Liu, Qingzhen and Li, Dawei and Chen, Zhikai and Liu, Xiaoze and Pan, Liangming},
+  journal={arXiv preprint arXiv:2410.16676},
+  year={2024}
+}
+@article{li2023counterfactual,
+  title={Counterfactual reasoning: Testing language models' understanding of hypothetical scenarios},
+  author={Li, Jiaxuan and Yu, Lang and Ettinger, Allyson},
+  journal={arXiv preprint arXiv:2305.16572},
+  year={2023}
+}
+@article{wu2023reasoning,
+  title={Reasoning or reciting? exploring the capabilities and limitations of language models through counterfactual tasks},
+  author={Wu, Zhaofeng and Qiu, Linlu and Ross, Alexis and Aky{\"u}rek, Ekin and Chen, Boyuan and Wang, Bailin and Kim, Najoung and Andreas, Jacob and Kim, Yoon},
+  journal={arXiv preprint arXiv:2307.02477},
+  year={2023}
+}
