--- a/mybib.bib
+++ b/mybib.bib
@@ -41,3 +41,63 @@
   journal={arXiv preprint arXiv:2307.02477},
   year={2023}
 }
+@article{li2021causalbert,
+  title={Causalbert: Injecting causal knowledge into pre-trained models with minimal supervision},
+  author={Li, Zhongyang and Ding, Xiao and Liao, Kuo and Qin, Bing and Liu, Ting},
+  journal={arXiv preprint arXiv:2107.09852},
+  year={2021}
+}
+@article{zheng2023preserving,
+  title={Preserving commonsense knowledge from pre-trained language models via causal inference},
+  author={Zheng, Junhao and Ma, Qianli and Qiu, Shengjie and Wu, Yue and Ma, Peitian and Liu, Junlong and Feng, Huawen and Shang, Xichen and Chen, Haibin},
+  journal={arXiv preprint arXiv:2306.10790},
+  year={2023}
+}
+@article{jiang2023large,
+  title={Large Language Model for Causal Decision Making},
+  author={Jiang, Haitao and Ge, Lin and Gao, Yuhe and Wang, Jianian and Song, Rui},
+  journal={arXiv preprint arXiv:2312.17122},
+  year={2023}
+}
+@article{chen2024unified,
+  title={A Unified Causal View of Instruction Tuning},
+  author={Chen, Lu and Huang, Wei and Zhang, Ruqing and Chen, Wei and Guo, Jiafeng and Cheng, Xueqi},
+  journal={arXiv preprint arXiv:2402.06220},
+  year={2024}
+}
+@inproceedings{jin2023cladder,
+  title={Cladder: Assessing causal reasoning in language models},
+  author={Jin, Zhijing and Chen, Yuen and Leeb, Felix and Gresele, Luigi and Kamal, Ojasv and Zhiheng, LYU and Blin, Kevin and Adauto, Fernando Gonzalez and Kleiman-Weiner, Max and Sachan, Mrinmaya and others},
+  booktitle={Thirty-seventh conference on neural information processing systems},
+  year={2023}
+}
+@misc{wang2023contextualized,
+  title={Contextualized multi-step commonsense reasoning through context extension},
+  author={Wang, Hecong and Xu, Erqian and Liu, Pinxin and Meng, Zijian and Bai, Zhen},
+  year={2023}
+}
+@inproceedings{zang2023discovering,
+  title={Discovering the real association: Multimodal causal reasoning in video question answering},
+  author={Zang, Chuanqi and Wang, Hanqing and Pei, Mingtao and Liang, Wei},
+  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  pages={19027--19036},
+  year={2023}
+}
+@article{he2022cpl,
+  title={Cpl: Counterfactual prompt learning for vision and language models},
+  author={He, Xuehai and Yang, Diji and Feng, Weixi and Fu, Tsu-Jui and Akula, Arjun and Jampani, Varun and Narayana, Pradyumna and Basu, Sugato and Wang, William Yang and Wang, Xin Eric},
+  journal={arXiv preprint arXiv:2210.10362},
+  year={2022}
+}
+@article{lu2022neuro,
+  title={Neuro-symbolic procedural planning with commonsense prompting},
+  author={Lu, Yujie and Feng, Weixi and Zhu, Wanrong and Xu, Wenda and Wang, Xin Eric and Eckstein, Miguel and Wang, William Yang},
+  journal={arXiv preprint arXiv:2206.02928},
+  year={2022}
+}
+@article{pawlowski2023answering,
+  title={Answering causal questions with augmented llms},
+  author={Pawlowski, Nick and Vaughan, James and Jennings, Joel and Zhang, Cheng},
+  journal={None},
+  year={2023}
+}
