--- a/Experiments/piqa/llama3.1-eval.ipynb
+++ b/Experiments/piqa/llama3.1-eval.ipynb
@@ -222,8 +222,13 @@
     "model = AutoModelForCausalGeneration.from_pretrained(model_name)\n",
     "\n",
     "# Move model to GPU if available\n",
-    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-    "model = model.to(device)\n",
+    "if torch.cuda.is_available():\n",
+    "    device = [0, 1]  # Use GPUs 0 and 1\n",
+    "    model = torch.nn.DataParallel(model, device_ids=device)\n",
+    "    model = model.to(f'cuda:{device[0]}')\n",
+    "else:\n",
+    "    device = \"cpu\"\n",
+    "    model = model.to(device)\n",
     "\n",
     "def post_process(response):\n",
     "    pattern = r'<answer>(.*?)</answer>'\n",
@@ -242,7 +247,7 @@
     "    )\n",
     "    \n",
     "    # Tokenize and generate\n",
-    "    inputs = tokenizer(formatted_prompt, return_tensors=\"pt\").to(device)\n",
+    "    inputs = tokenizer(formatted_prompt, return_tensors=\"pt\").to(device if isinstance(device, str) else f'cuda:{device[0]}')\n",
     "    outputs = model.generate(\n",
     "        **inputs,\n",
     "        max_new_tokens=128,\n",
@@ -253,8 +258,7 @@
     "    \n",
     "    # Decode and return response\n",
     "    response = tokenizer.decode(outputs[0], skip_special_tokens=True)\n",
-    "    return response\n",
-    "\n"
+    "    return response\n"
    ]
   },
   {
