--- a/Sections/introduction.tex
+++ b/Sections/introduction.tex
@@ -1,34 +1,28 @@
 Reasoning is an essential aspect of artificial intelligence, with applications 
 spanning various domains such as problem-solving, theorem proving, 
-decision-making, and robotics (Manning, 2022). According to the book Thinking, 
-Fast and Slow (Daniel, 2017), humans possess two cognitive systems: "System 1" 
+decision-making, and robotics \cite{in1}. According to the book Thinking, 
+Fast and Slow \cite{in2}, humans possess two cognitive systems: "System 1" 
 and "System 2." "System 1" operates quickly, relying on instincts, emotions, 
 intuition, and unconscious processes. In contrast, "System 2" functions more 
 slowly, handling tasks that require reasoning, such as algorithmic reasoning, 
 logical analysis, and mathematical abilities. Reasoning plays a crucial role 
-as one of the key functions of "System 2" (Bengio, 2017; Weston and Sukhbaatar, 
-2023). 
+as one of the key functions of "System 2" \cite{in3} \cite{in4}. 
 
 Reasoning can be divided into two main types: formal language reasoning and 
-natural language reasoning g (Reiter, 1975; Berzonsky, 1978; Teig and Scherer, 
-2016; Yu et al., 2023a; Zhao et al., 2023b; Li et al., 2023u). Formal language 
+natural language reasoning g \cite{in5} \cite{in6} \cite{in7} \cite{in8}. Formal language 
 reasoning is commonly used in fields such as formal verification of software and hardware 
-systems, theorem proving, and automated reasoning (Reiter, 1975; Berzonsky, 1978). 
-On the other hand, natural language reasoning enables more intuitive human-computer 
-interactions and supports tasks such as question answering (Shao et al., 2023;
-Jiang et al., 2021c), information retrieval l (Zhu et al., 2023d; Ai et al., 2023), text 
-summarizationn (Liu et al., 2023n), and sentiment analysis (Yu et al., 2023a; Araci, 2019;
-Barbieri et al., 2021).
+systems, theorem proving, and automated reasoning. On the other hand, natural language 
+reasoning enables more intuitive human-computer interactions and supports tasks such as 
+question answering \cite{in9}, information retrieval \cite{in10}, text summarizationn \cite{in11}, 
+and sentiment analysis \cite{in12}.
 
-Since their inception, foundation models (Bommasani et al., 2021)  have demonstrated 
-remarkable effectiveness in various fields such as natural language processing 
-(Qiao et al., 2022), computer vision (Wang et al., 2023h), and multimodal tasks  
-(Li, 2023). Foundation models typically consist of billions of parameters and 
-undergo(pre-)training using self-supervised learning (Jain et al., 2023) on a 
-broad dataset (Bommasani et al., 2021). . After (pre-)trained, foundation models 
-can be fine-tuned to tackle a wide range of tasks through methods such as task-specific 
-fine-tuning, linear probing, or prompt engineering, demonstrating remarkable 
-generalizability and impressive accuracy (Bommasani et al., 2021; Qiu et al., 2023a)
+Since their inception, foundation models \cite{in13}  have demonstrated 
+remarkable effectiveness in various fields such as natural language processing \cite{in14}, 
+computer vision \cite{in15}, and multimodal tasks \cite{in16}. Foundation models typically 
+consist of billions of parameters and undergo(pre-)training using self-supervised learning 
+on a broad dataset. . After (pre-)trained, foundation models can be fine-tuned to tackle a 
+wide range of tasks through methods such as task-specific fine-tuning, linear probing, or 
+prompt engineering, demonstrating remarkable generalizability and impressive accuracy.
 
 As a rapidly growing field in artificial intelligence research, reasoning with 
 foundation models aims to develop models capable of understanding and interacting 
